k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: kubernetes-challenge
spec:
  selector:
    app: node-js-server
  ports:
    - name: backend
      port: 80
      targetPort: backend
