k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: kubernetes-challenge
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: node-server
spec:
  rules:
    - host: test.yolossn.com
      http:
        paths:
          - path: /
            backend:
              serviceName: backend-service
              servicePort: 80
